# topolog-embed

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: 01_basic_whitening.rs  02_basic_p_umap.rs
python/beir/: make_arrowspace.py  produce_arrowspace.py
src/: lib.rs
src/backend/: mod.rs
src/io/: mod.rs
src/topolog/: mod.rs  p_umap.rs  whitening.rs
